--- a/src/stories/organisms/reserveDetails/reserveDetails.module.scss
+++ b/src/stories/organisms/reserveDetails/reserveDetails.module.scss
@@ -14,14 +14,10 @@
   flex-direction: row;
   justify-content: space-between;
 }
-.reserve-details--input-date {
-  z-index: 3;
-}
 .reserve-details--input1 {
   margin-left: 16px;
   z-index: 2;
 }
-
 .reserve-details--invite-friends {
   display: flex;
   flex-direction: row;
